--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -16,7 +16,7 @@ jobs:
 
     - name: Create virtual environment
       working-directory: ${{github.workspace}}
-      run: python3 -m venv && source .venv/bin/activate
+      run: python3 -m venv .venv && source .venv/bin/activate
 
     - name: Restore required packages
       working-directory: ${{github.workspace}}
