--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -16,16 +16,18 @@ jobs:
 
     - name: Create virtual environment
       working-directory: ${{github.workspace}}
-      run: python3 -m venv .venv && source .venv/bin/activate
+      run: python3 -m venv .venv
 
-    - name: Restore required packages
+    - name: Install required packages
       working-directory: ${{github.workspace}}
-      run: pip install -r requirements.txt
-
-    - name: Install mutmut that includes CI/CD feature
-      working-directory: ${{github.workspace}}
-      run: git clone https://github.com/boxed/mutmut.git && pip install -e mutmut
+      run: |
+        source .venv/bin/activate
+        pip install -r requirements.txt
+        git clone https://github.com/boxed/mutmut.git
+        pip install -e mutmut
 
     - name: Build/run unit/mutation tests
       working-directory: ${{github.workspace}}
-      run: mutmut run
+      run: |
+        source .venv/bin/activate
+        mutmut run
